style: position, scroll overflow and build problems enhancement/fix

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -14,6 +14,7 @@
 
 .highlight.c3:hover {
   background-color: #ffd6a5;
+  border-radius: 2px;
 }
 
 /* Shooting stars animation - adapted for your green background */
